Bug 951671, Periodic Worker activity during idle. r=khuey.